# python-project-lvl3

./: Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
page_loader/modules/: module_1.py
page_loader/scripts/: main_script.py  page_loader.py
tests/: test_module_1.py  test_page_loader.py
