[tool.poetry]
name = "python-project-lvl3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = 'page_loader'}, ]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"

[tool.poetry.scripts]
page_loader = 'page_loader.scripts.page_loader:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
